<resources>
    <string name="app_name">ИНФОПРО: Мобильный обходчик</string>
    <string name="image_default_desc">ИНФОПРО: Мобильный обходчик</string>
    <string name="geo_lbl_title">Координаты:</string>
    <string name="geo_lbl_empty_value">-- . --</string>
    <string name="hint_search">Поиск</string>
    <string name="mechanism_header">Прибор учета:</string>
    <string name="owner_header">Сведения о владельце:</string>
    <string name="lbl_consumer">Потребитель:</string>
    <string name="lbl_location">Адрес:</string>
    <string name="lbl_mechanism">Прибор учета:</string>
    <string name="lbl_save">Сохранить</string>
    <string name="reading_dt_name">Дата:</string>
    <string name="lbl_detail">Подробно</string>
    <string name="lbl_mechanism_zone_count">Кол-во зон:</string>
    <string name="lbl_mechanism_install_dt">Дата установки ПУ:</string>
    <string name="lbl_mechanism_verification_dt">Дата поверки ПУ:</string>
    <string name="lbl_mechanism_seal">Пломба:</string>
    <string name="lbl_document_number">Номер документа:</string>
    <string name="lbl_mechanism_number">Номер ПУ:</string>
    <string name="lbl_mechanism_type">Тип ПУ:</string>
    <string name="lbl_mechanism_capacity_after">Кол-во знаков ПКУ:</string>
    <string name="zone1_name">День:</string>
    <string name="zone2_name">Ночь:</string>
    <string name="zone3_name">Полупик:</string>
    <string name="comment_name">Примечание:</string>
    <string name="prev_block_name">Предыдущие</string>
    <string name="current_block_name">Текущие</string>
    <string name="site">www.info-pro.ru</string>
    <string name="app_description">«Мобильный обходчик» - приложение, разработанное на платформе Android. Используется для выполнения непосредственной работы по заданиям обходов линейными инженерами, которые производят съем показаний.</string>
    <string name="setting_title">Настройки приложения</string>
    <string name="setting_server_conn_title">Параметры подключение к серверу</string>
    <string name="setting_server_lbl">Сервер (URL):</string>
    <string name="setting_login_lbl">Логин:</string>
    <string name="setting_pwd_lbl">Пароль:</string>
    <string name="setting_branch_title">Параметры филиала</string>
    <string name="setting_branch_code_lbl">Код филиала:</string>
    <string name="setting_pin_lbl">PIN-код:</string>
    <string name="lbl_consumer_phone">Телефон:</string>
    <string name="comment_input_hint">Максимальное кол-во символов 150</string>
    <string name="lbl_average">Средний расход:</string>
    <string name="gps_lbl">GPS-координаты:</string>
    <string name="setting_other_title">Прочие настройки</string>
    <string name="setting_gps_radius_title">Радиус поиск по GPS:</string>
    <string name="lbl_mechanism_ratio">Кт:</string>
    <string name="lbl_fitting_position">Место установки:</string>
    <string name="camera_progress_note">Пожалуйста, дождитесь окончания обработки</string>
</resources>
