<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:minHeight="300dp"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="start"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/app_name"
                android:textColor="#212126"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/about_version_lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@font/roboto_regular"
                android:gravity="bottom"
                android:text="Версия 1.0"
                android:textColor="#787888"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="bottom"
                android:text="@string/site"
                android:textColor="#787888"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_regular"
            android:padding="20dp"
            android:text="@string/app_description"
            android:textColor="#212126"
            android:textSize="13sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>