<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height">

            <Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"
                android:background="@drawable/toolbar_background"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/image_default_desc"
                    android:src="@drawable/icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="top"
                    android:text="@string/setting_title"
                    android:textAlignment="center"
                    android:textColor="@color/geo_lbl_color"
                    android:textAllCaps="true"
                    android:textSize="@dimen/geo_lbl_size"
                    tools:ignore="RtlCompat" />

            </Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/setting_server_conn_title"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/setting_server_lbl"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/setting_server_url"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height"
                        android:layout_gravity="start"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:background="@drawable/input_selector"
                        android:fontFamily="@font/roboto_regular"
                        android:inputType="textUri"
                        android:maxLength="300"
                        android:padding="5dp"
                        android:textSize="12sp"
                        tools:ignore="LabelFor"
                        android:importantForAutofill="no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/setting_login_lbl"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/setting_login"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height"
                        android:layout_gravity="start"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:background="@drawable/input_selector"
                        android:fontFamily="@font/roboto_regular"
                        android:inputType="textPersonName"
                        android:maxLength="50"
                        android:padding="5dp"
                        android:textSize="12sp"
                        tools:ignore="LabelFor"
                        android:importantForAutofill="no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/setting_pwd_lbl"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/setting_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height"
                        android:layout_gravity="start"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:background="@drawable/input_selector"
                        android:fontFamily="@font/roboto_regular"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:padding="5dp"
                        android:textSize="12sp"
                        tools:ignore="LabelFor"
                        android:importantForAutofill="no" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/setting_branch_title"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/setting_branch_code_lbl"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/setting_branch_code"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height"
                        android:layout_gravity="start"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:background="@drawable/input_selector"
                        android:fontFamily="@font/roboto_regular"
                        android:inputType="textPersonName"
                        android:maxLength="20"
                        android:padding="5dp"
                        android:textSize="12sp"
                        tools:ignore="LabelFor"
                        android:importantForAutofill="no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/setting_pin_lbl"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/setting_pin_code"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height"
                        android:layout_gravity="start"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:background="@drawable/input_selector"
                        android:fontFamily="@font/roboto_regular"
                        android:inputType="text"
                        android:maxLength="10"
                        android:padding="5dp"
                        android:textSize="12sp"
                        tools:ignore="LabelFor"
                        android:importantForAutofill="no" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/setting_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        app:labelVisibilityMode="labeled"
        app:itemIconTint="@color/menu_color"
        app:itemTextColor="@color/menu_color"
        app:menu="@menu/setting_menu" />

</RelativeLayout>